--- a/public/assets/sass/components/_features.scss
+++ b/public/assets/sass/components/_features.scss
@@ -37,12 +37,16 @@
 			p{
 				color:#A89CC8;
 			}
+
+			span{
+				display:inline-block;
+				margin:0 auto;
+			}
 		}
 
 		@include breakpoint(medium) {
 			li {
 				width: calc(#{(100% / 2)} - #{_size(element-margin)});
-
 				&:nth-child(3) {
 					margin-top: (_size(element-margin) * 1.5);
 				}
